tests/diagnostics/file_roles/manifest_declarations/constant_declaration/expect.txt
# exit: 1
input/PACKAGE.coppice:1:1: error: PACKAGE.coppice may only contain exports declarations
  ANSWER := 42
  ^
